--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "antd": "^5.23.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
