--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@tiptap/extension-image": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "antd": "^5.23.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
-    "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
