--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/starter-kit": "^2.11.2",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
